# deeplabv3_demo_package

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
deeplabv3_demo/: demo.py  streamlit_demo.py
deeplabv3_demo/resources/models/: deeplab_v3_plus_mnv2_aspp_decoder_256_integer_quant.tflite  deeplab_v3_plus_mnv2_decoder_513_integer_quant.tflite
deeplabv3_demo/resources/models/tmp/: deeplab_v3_plus_mnv2_decoder_256_integer_quant.tflite
hooks/: pre-commit
tests/: regression.py  test_no_error.py  test_regression.py
tests/img/: LICENSE
